# flock-field

./: .gitignore  LICENSE  README.md  benchmark.ipynb  bird.glsl  flock_field.ipynb  flock_sim.py  main.py  pyproject.toml  render_trails.py
tests/: test_flock_sim.py
tests/golden/: base.npz  noise.npz
