[project]
name = "flock-field"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "chex>=0.1.92",
    "jax>=0.10.2",
    "jaxtyping>=0.3.11",
    "pygame-ce>=2.5.7",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
]

[tool.ruff]
lint.ignore = ["F722"]
