[project]
name = "flock-field"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "chex>=0.1.92",
    "ipycanvas>=0.14.3",
    "jax>=0.10.2",
    "jaxtyping>=0.3.11",
]

[tool.ruff]
lint.ignore = ["F722"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "ruff>=0.15.21",
]
